# bedwa-rs

./: .gitignore  .typos.toml  Cargo.toml  README.md  bw-world.json  shop.json  shop_config.json
src/: bedwars_config.rs  colors.rs  edit.rs  lobby.rs  main.rs  match.rs  menu.rs  resource_spawners.rs  shop.rs  spectator.rs
src/base/: README.md  armor.rs  armor_right_click_equip.rs  bow.rs  break_blocks.rs  build.rs  chat.rs  chests.rs  combat.rs  death.rs  drop_items.rs  enchantments.rs  fall_damage.rs  item.rs  item_pickup.rs  mod.rs  on_death.rs  physics.rs  regeneration.rs  scoreboard.rs  void_death.rs
src/base/utils/: debug.rs
src/commands/: bedwars_admin.rs  bedwars_lobby.rs  mod.rs
src/items/: consumable.rs  ender_pearl.rs  mod.rs
src/items/effects/: potion.rs
src/utils/: aabb.rs  block.rs  block_state.rs  despawn_timer.rs  direction.rs  enchantments.rs  inventory.rs  item_kind.rs  item_stack.rs  mod.rs  ray_cast.rs
