[package]
name = "bedwa-rs"
version = "0.1.0"
edition = "2021"

[dependencies]

bevy_ecs = "0.14.2"
bevy_state = "0.14.2"
bevy_time = "0.14.2"
color-eyre = "0.6.3"
iter_tools = "0.21.0"
ordermap = { version = "0.5.3", features = ["serde"] }
rand = "0.8.5"
rayon = "1.10.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
thiserror = "1.0.64"
tracing = "0.1.40"
# valence = { git = "https://github.com/valence-rs/valence/" }
valence = { path = "../valence" }
# item-stack-serialize
# valence = { git = "https://github.com/maxomatic458/valence/", branch = "item-stack-serialize"}
# valence_spatial = "=0.2.0-alpha.1"
